@startuml

title __THIRTEENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct_basic.thirteenth {
    class cn.shui.learning_plan.datastruct_basic.thirteenth.L143 {
        + reorderList1()
        + reorderList2()
        + reorderList3()
        - mergeList()
        - middleNode()
        - reverseList()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.thirteenth {
    class cn.shui.learning_plan.datastruct_basic.thirteenth.L143.ListNode {
        ~ val : int
        ~ ListNode()
        ~ ListNode()
        ~ ListNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.thirteenth {
    class cn.shui.learning_plan.datastruct_basic.thirteenth.L25 {
        + reverseKGroup1()
        + reverseKGroup2()
        - myReverse()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.thirteenth {
    class cn.shui.learning_plan.datastruct_basic.thirteenth.L25.ListNode {
        ~ val : int
        ~ ListNode()
        ~ ListNode()
        ~ ListNode()
    }
  }
  

  cn.shui.learning_plan.datastruct_basic.thirteenth.L143 +-down- cn.shui.learning_plan.datastruct_basic.thirteenth.L143.ListNode
  cn.shui.learning_plan.datastruct_basic.thirteenth.L143.ListNode o-- cn.shui.learning_plan.datastruct_basic.thirteenth.L143.ListNode : next
  cn.shui.learning_plan.datastruct_basic.thirteenth.L25 +-down- cn.shui.learning_plan.datastruct_basic.thirteenth.L25.ListNode
  cn.shui.learning_plan.datastruct_basic.thirteenth.L25.ListNode o-- cn.shui.learning_plan.datastruct_basic.thirteenth.L25.ListNode : next


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
